# GraphRag-PoC-Project

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  chat.py  graph.py  index.py
backend/app/schemas/: __init__.py  chat.py  graph.py  index.py
backend/app/services/: __init__.py  chat.py  graphrag.py
backend/samples/controlled_tech_corpus/: 01_astra_orion.txt  02_ingestion_embeddings.txt  03_betabank_policy.txt  README.md  controlled_tech_corpus_all.txt  expected_graph.json  expected_graph_combined_upload.json
backend/samples/graphrag_poc/: 01_project_overview.txt  02_indexing_pipeline.txt  03_query_and_evaluation.txt  README.md  expected_graph.json  expected_graph_combined_upload.json  graphrag_poc_all.txt
backend/scripts/: init_db.py  init_graphrag.py  validate_controlled_sample.py  validate_graphrag_poc_sample.py
backend/tests/: test_config_and_routing.py  test_controlled_sample_integration.py  test_graphrag_poc_sample_integration.py
docs/: Controlled-Tech-Corpus-Test-Report.md  First-Test-Results.md  Fourth-Test-Results.md  GraphRAG-PoC-Sample-Test-Report.md  GraphRAG-Project-Description.md  Third-Test-Results.md  graphrag-optimization.md  hybrid-source-grounded-implementation-plan.md  second-test-local-results.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/app/: index.tsx  router.tsx
(+28 files in other folders)
